//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  mobileNumber String
  name String
  agencyCode String
  role Role [not null]
  rewardCode RewardCode [not null]
  buyer Buyer
  Order Order [not null]
}

Table RewardCode {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rewardCode String
  isClaimed Boolean [not null, default: false]
  User User
  userId String
}

Table Buyer {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  orders Order [not null]
  addresses Address [not null]
  Payment Payment [not null]
  Cart Cart [not null]
}

Table Products {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  description String [not null]
  productImageUrl String
  metaData Json
  category String[] [not null]
  ProductsVariant ProductVariant [not null]
  Flipkart Boolean [not null, default: false]
  Amazon Boolean [not null, default: false]
  productUrl String [not null]
  type String
  isActive Boolean [not null, default: false]
}

Table ProductVariant {
  id Int [pk, increment]
  weight String [not null]
  imageUrl String[] [not null]
  price Int
  stock Int
  products Products
  productId String [not null]
  isVariantActive Boolean [not null, default: false]
}

Table Cart {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  id String [pk]
  checkedOut Boolean [not null, default: false]
  buyer Buyer [not null]
  buyerId String [unique, not null]
  Order Order [not null]
  cartItem cartItems [not null]
}

Table cartItems {
  id String [pk]
  productVariantId Int [not null]
  qty Int [not null]
  Cart Cart
  cartId String
  name String
  weight String
}

Table Address {
  addresId Int [pk, increment]
  name String [not null]
  mobileNumber String [not null]
  address Json
  Buyer Buyer
  buyerId String
  Order Order [not null]
}

Table Payment {
  id Int [pk, increment]
  paymentId String [unique, not null]
  order Order [not null]
  orderId Int [not null]
  dateOfPayment DateTime [not null]
  Buyer Buyer [not null]
  buyerId String [not null]
}

Table Order {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderDate DateTime [default: `now()`]
  orderAmount Float [not null]
  status OrderStatus [not null, default: 'PROCESSING']
  user User
  Buyer Buyer
  buyerId String
  cart Cart
  cartid String
  metaData Json
  orderItems orderItems [not null]
  discountedAmount Int
  discountCode String
  ShippingCost Int
  address Address
  AddresId Int
  Payment Payment [not null]
  userId String
  shipRocketDetails shipRocketDetails [not null]
}

Table orderItems {
  id String [pk]
  productVariantId Int [not null]
  qty Int [not null]
  Order Order
  orderId Int
  name String
}

Table shipRocketDetails {
  id String [pk]
  Order Order
  orderId Int
  shiprocket_OrderId Int
  shiprocket_ShipmentId Int
  shiprocket_status String [not null]
  shiprocket_status_code Int
  metaData Json
}

Enum Role {
  ADMIN
  CUSTOMER
}

Enum OrderStatus {
  USERCANCELLED
  SELLERCANCELLED
  PROCESSING
  PACKED
  SHIPPED
  OUTFORDELIVERY
  DELIVERED
}

Enum PaymentType {
  CASHONDELIVERY
  UPI
  CREDITCARD
  DEBITCARD
}

Enum WeightInGram {
  Gram500
  Gram100
  Gram50
}

Enum CategoryOfProducts {
  KitchenSpices
  ComingSoon
  MouthWatering
  NonvegTadka
  WeekandTadka
}

Enum ProductType {
  blended
  grounded
}

Ref: RewardCode.userId > User.id

Ref: Buyer.userId - User.id [delete: Cascade]

Ref: ProductVariant.productId > Products.id

Ref: Cart.buyerId > Buyer.id [delete: Cascade]

Ref: cartItems.cartId > Cart.id

Ref: Address.buyerId > Buyer.id

Ref: Payment.orderId > Order.id

Ref: Payment.buyerId > Buyer.id

Ref: Order.userId > User.id

Ref: Order.buyerId > Buyer.id

Ref: Order.cartid > Cart.id

Ref: Order.AddresId > Address.addresId

Ref: orderItems.orderId > Order.id

Ref: shipRocketDetails.orderId > Order.id